JDK17 Migration: Adding some changes suitable for the convention of JDK17 and updating few build scripts