@@ -25,7 +25,7 @@
         <dbunitVersion>2.7.3</dbunitVersion>
         <spring-data.version>3.2.3</spring-data.version>
         <mockitoVersion>4.8.1</mockitoVersion>
-        <bytebuddyVersion>1.17.6</bytebuddyVersion>
+        <bytebuddyVersion>1.12.19</bytebuddyVersion>
         <apachePoi.version>4.1.2</apachePoi.version>
     </properties>
 
@@ -67,11 +67,10 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version>
+                    <version>3.14.0</version>
                     <configuration>
-                        <target>21</target>
-                        <source>21</source>
                         <compilerArgument>-proc:none</compilerArgument>
+                        <release>17</release>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -85,7 +84,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.2.5</version>
+                    <version>2.18.1</version>
                     <configuration>
                         <argLine>-Xmx1024m -XX:MaxMetaspaceSize=2056m</argLine>
                         <includes>
@@ -98,11 +97,11 @@
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.nio=ALL-UNNAMED
                             --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-                            --add-opens java.xml/org.w3c.dom=ALL-UNNAMED
-                            --add-opens java.xml/javax.xml.parsers=ALL-UNNAMED
-                            --add-opens java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
                             --add-modules java.desktop
                         </argLine>
+                        <environmentVariables>
+                            <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
+                        </environmentVariables>
                     </configuration>
                 </plugin>
             </plugins>
@@ -562,7 +561,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.2.5</version>
+                        <version>2.18.1</version>
                         <configuration>
                             <argLine>-Xmx1024m -XX:MaxMetaspaceSize=2056m</argLine>
                             <includes>
